# grime

./: .env.example  .gitignore  MAINTENANCE.md  README.md  REFACTOR_PLAN.md  claude.md  manage.py  pyproject.toml
demo/: settings.py  urls.py
grime/: admin.py  apps.py  forms.py  models.py  urls.py  viewer.py
grime/management/commands/: ingest.py  match_tags.py  ner.py  ocr.py  run_ner.py  run_ocr.py
grime/migrations/: 0001_initial.py  0002_alter_word_options_remove_document_column_schema_and_more.py  0003_rename_corrected_ner_label_word_corrected_label_and_more.py  0003_rename_text_word_ocr_text.py
grime/pipeline/: ditto.py  hf_ner.py  ingest.py  ner.py  ocr.py  run_ocr.py  tag_match.py  tag_viz.py  tesseract.py  textract.py
grime/static/grime/: viewer-core.js  viewer-image.js  viewer-ner.js  viewer-ocr.js  viewer-tag.js  viewer.css  viewer.js
grime/templates/admin/grime/: _document_viewer.html
grime/templates/admin/grime/documentpage/: change_form.html
grime/templates/grime/: document_detail.html  document_list.html
