[project]
name = "grime"
version = "0.1.1"
description = "Archival document management as a reusable Django app"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "grime contributors" }
]
keywords = ["django", "documents", "ocr", "archival", "ner"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Office/Business",
]
dependencies = [
    "Django>=5.0",
    "Pillow",
    "pypdf",
    "pdf2image",
    "pdfplumber",
    "django-environ",
]

[project.urls]
Homepage = "https://github.com/jklingen92/grime"
Repository = "https://github.com/jklingen92/grime.git"
Issues = "https://github.com/jklingen92/grime/issues"

[project.optional-dependencies]
ocr = ["pytesseract", "opencv-python", "numpy"]
textract = ["boto3"]
hf = ["transformers", "torch"]
viz = ["imageio[ffmpeg]"]
dev = [
    "pytesseract",
    "opencv-python",
    "numpy",
    "boto3",
    "imageio[ffmpeg]",
    "black",
    "pre-commit",
    "django-extensions",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["grime*"]
exclude = ["demo*"]

[tool.black]
target-version = ["py311"]

[tool.setuptools.package-data]
grime = [
    "templates/**/*.html",
    "static/**/*",
]
